2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* src/ev-sidebar.c: (ev_sidebar_init): remove some extraneous padding
	around the sidebar pages, there's already padding outside

2006-10-27  Bastien Nocera  <hadess@hadess.net>

	* configure.in: fix dbus detection (it's dbus-1, not dbus since 2003)
	(Closes: #365387)
	* src/plparse/totem-disc.c: (cd_cache_free): close the dbus connection
	before unref'ing it, as it is a private connection (Closes: #365265)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_stop_play_pipeline):
	  Don't use poll_for_state_change() when stopping, it can lead to
	  deadlocks when called from the bus handler (e.g. after redirect
	  message) and isn't really necessary anyway. (Closes: #361787)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/totem-private.h:
	* src/totem.c: (seek_slider_pressed_cb), (seek_slider_released_cb),
	(totem_action_handle_key_release), (totem_action_handle_key_press):
	  When seeking while playing, go straight back into playing mode after
	  the seek (ie. do full audio scrubbing as well). (Closes: #363699)

2006-10-26  Tim-Philipp Müller  <tim at centricular dot net>

	* src/.cvsignore:
	  Add totem-video-indexer.

2006-10-26  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Jerry Tan <jerry.tan@sun.com>
	to add support for Wave and Au files (Closes: #365216)

2006-10-25  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemPlugin.cpp:
	
	If we still don't have a supported mime-type when we get a new stream,
	try getting the mime-type from the URL minus the possible script arguments,
	helps getting the mime-type from broken IIS web servers.

	Don't request a new stream if the SRC is given, and is the same URL as
	our filename/url/qtsrc parameter

	* src/plparse/totem-pl-parser.c: (totem_pl_parser_is_asx),
	(totem_pl_parser_is_asf), (totem_pl_parser_can_parse_from_data):